# zynex

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
DCheck/: __init__.py  api.py
DCheck/core/: engine.py  report.py
DCheck/rules/: base.py  performance.py  quality.py  skewness.py  structural.py
dcheck/: __init__.py  api.py
dcheck/core/: report.py
dcheck/modules/core_quality/: module.py
dcheck/orchestrator/: adapters.py  engine.py  registry.py
docs/: zynex-core-io.md
tests/: conftest.py  test_basic.py  test_io_contract.py  test_orchestrator_metadata.py  test_orchestrator_report_rows.py  test_skewness.py  test_small_files.py
zynex/: __init__.py  api.py
zynex/common/: interfaces.py  types.py
zynex/core/: engine.py  report.py
zynex/modules/core_quality/: module.py
zynex/orchestrator/: adapters.py  aggregator.py  engine.py  registry.py
zynex/rules/: base.py  performance.py  quality.py  skewness.py  structural.py
